envoy-proxy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
            - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts: 
              - name: production
                domains: ["production.rikipermana.online"]
                routes: 
                  - match:
                      prefix: "/"
                    route:
                      cluster: production
              - name: staging
                domains: ["staging.rikipermana.online"]
                routes: 
                  - match:
                      prefix: "/"
                    route:
                      cluster: staging

  clusters: 
    - name: production
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: production
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app-production
                  port_value: 8080
    - name: staging
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: staging
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app-staging
                  port_value: 8080

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
